<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titCadDespesas"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnNovaDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNovo" />

        <Button
            android:id="@+id/btnEditarDespesas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEditar" />

        <Button
            android:id="@+id/btnExcluirDespesas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnExcluir" />

    </LinearLayout>
    
    <TextView    
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
        <LinearLayout
            android:id="@+id/srvDespesas"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:orientation="vertical">
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>