<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >	
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titInsereLancamento"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
	<ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical" >				
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/titData"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <DatePicker
		        android:id="@+id/dtpLancamento"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
		
		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceSmall" />		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/titDespesas"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <Spinner
		        android:id="@+id/cbDespesasLancamento"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
		
		    <TextView
		        android:id="@+id/textView6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceSmall" />		
		    <TextView
		        android:id="@+id/textView7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/titValor"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/txtValorLancamento"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="numberDecimal" />
		    	
		    <TextView
		        android:id="@+id/textView8"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    
		    <Button
		        android:id="@+id/btnSalvarLancamento"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/btnSalvar" />
		    
		</LinearLayout>
	</ScrollView>		 

</LinearLayout>